--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus neque magnam libero tenetur velit earum!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sequi repellendus impedit doloremque natus alias iste at eos et laudantium hic blanditiis, dolorum nulla corporis</p>
+        </div>
+    </div>
 </body>
 </html>
