--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus neque magnam libero tenetur velit earum!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sequi repellendus impedit doloremque natus alias iste at eos et laudantium hic blanditiis, dolorum nulla corporis</p>
