--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,10 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hiperblog
+            <span id="tagline">
+                Tu blog de confianza
+            </span>
         </div>
         <div id="post">
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus neque magnam libero tenetur velit earum!</h1>
