agregando el contenido adicional al blog y cambiando tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
         <div id="post">
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus neque magnam libero tenetur velit earum!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sequi repellendus impedit doloremque natus alias iste at eos et laudantium hic blanditiis, dolorum nulla corporis</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem quaerat in exercitationem iste fugiat repellat provident, soluta, iure, libero harum nam eius hic enim dolorum nemo! Atque placeat nulla possimus corporis soluta, voluptates quod culpa ipsa architecto! Facere nobis dolore earum maxime obcaecati magni fugiat numquam? Aperiam, voluptates molestias.
+            </p>
         </div>
     </div>
 </body>
