agregando cuenta de github + cambie la cabecera maestra + color de fuente: azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hiperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog de maestro
             </span>
         </div>
         <div id="post">
@@ -21,6 +21,7 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem quaerat in exercitationem iste fugiat repellat provident, soluta, iure, libero harum nam eius hic enim dolorum nemo! Atque placeat nulla possimus corporis soluta, voluptates quod culpa ipsa architecto! Facere nobis dolore earum maxime obcaecati magni fugiat numquam? Aperiam, voluptates molestias.
             </p>
+            <p>Mi cuenta: <a href="https://github.com/Jeremias0901/">Jeremias0901</a></p>
         </div>
     </div>
 </body>
