--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="img/cohete.png" width="40">
             Hiperblog
             <span id="tagline">
                 Tu blog de confianza
