--- a/blogpost.html
+++ b/blogpost.html
@@ -24,5 +24,8 @@
             <p>Mi cuenta: <a href="https://github.com/Jeremias0901/">Jeremias0901</a></p>
         </div>
     </div>
+    <footer class="footer">
+        Hecho con amor en Platzi &#128154;
+    </footer>
 </body>
 </html>
