Agregando imagen y estilos al link de la cuenta

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,7 +22,10 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem quaerat in exercitationem iste fugiat repellat provident, soluta, iure, libero harum nam eius hic enim dolorum nemo! Atque placeat nulla possimus corporis soluta, voluptates quod culpa ipsa architecto! Facere nobis dolore earum maxime obcaecati magni fugiat numquam? Aperiam, voluptates molestias.
             </p>
-            <p>Mi cuenta de GitHub: <a href="https://github.com/Jeremias0901/" target="_blank">Jeremias0901</a></p>
+            <span class="account">
+                <img class="account__img" src="./img/github.svg">
+                <a class="account__text" href="https://github.com/Jeremias0901/" target="_blank">Jeremias0901</a>
+            </span>
         </div>
     </div>
     <footer class="footer">
