Agregando mi cuenta de github y un mensaje de contribuciòn

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,9 @@
             <a class="link__account" href="https://github.com/Jeremias0901/" target="_blank">
                 <img class="link__img" src="./img/github.svg">
             </a>
+            <a class="link__account" href="https://github.com/OscarDiaz0307/" target="_blank">
+                <img class="link__img" src="./img/github.svg">
+            </a>
         </div>
     </div>
     <footer class="footer">
