cambio cometido desde github
para probar pushear sin pullear

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                 Tu blog de confianza
             </span>
         </div>
+        <!-- Agregando linea desde la interfaz de github -->
         <div id="post">
             <h1>Lorem ipsum dolor sit amet adipisicing elit. Necessitatibus neque magnam libero velit earum!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sequi repellendus impedit doloremque natus alias iste at eos et laudantium hic blanditiis, dolorum nulla corporis</p>
