--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem quaerat in exercitationem iste fugiat repellat provident, soluta, iure, libero harum nam eius hic enim dolorum nemo! Atque placeat nulla possimus corporis soluta, voluptates quod culpa ipsa architecto! Facere nobis dolore earum maxime obcaecati magni fugiat numquam? Aperiam, voluptates molestias.
             </p>
+            <p>
+                <img src="img/foto.jpg" width="100%">
+            </p>
             <a class="link__account" href="https://github.com/Jeremias0901/" target="_blank">
                 <img class="link__img" src="./img/github.svg">
             </a>
