--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <img id="logo" src="img/cohete.png" width="40">
             Hiperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog de confianza | hecho por Jere
             </span>
         </div>
         <!-- Agregando linea desde la interfaz de github -->
